--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,104 @@
+
+/*font-family: 'Cormorant Garamond', serif;
+font-family: 'Montserrat', sans-serif;*/
 body{
-    background-color: aqua;
-    background-image: url('t3.jpeg');
-    color: white;
+    /* background-color: #cdcfc0; */
+    background-image: url("Green Organic Warm Food and Restaurant Bio-Link Website.png");
+    color: black;
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: 'Cormorant Garamond', serif;
 }
 
 .highlightedClass{
-    color: red;
-    font-size: 100px;
+    background-color: black;
+    color: #f1ebe5;
+}
+.black{
+    background-color: black;
+}
+
+
+
+/* left division */
+
+.left{
+    width: 30%;
+    /* margin: 40px 30px; */
+    margin-left: 5%;
+    display: inline-block;
+    text-align: center;
+    /* padding: 15px;    */
+    /* background-color: #fff; */
+}
+.heading{
+    font-size: 400%;
+    margin-bottom: 100px;
+    /* font-family: 'Montserrat', sans-serif;*/
+    font-weight: lighter;
+
+
+}
+.inputBox{
+    background-color: #f1ebe5;
+    /* width: 7%; */
+    font-size: 25px;
+    border: 1px solid rgba(0, 0, 0, 0.150);
+    padding: 5px;
+    margin-right: 29px;
+    text-align: center;
+}
+.inputBox2{
+    width: 50px;
+}
+.inputBox4{
+    width: 100px;
+}
+
+.checkButton{
+    background-color: #f1ebe5;
+    height: 70px;
+    width: 150px;
+    border-radius: 20px;
+    font-size: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.150);
+    margin: 50px auto;
+    color: rgba(0, 0, 0, 0.500);
+}
+.checkButton:hover{
+    background-color: black;
+    color: #f1ebe5;
+    cursor: pointer;
+}
+.generalOutput{
+    text-align: center;
+}
+.generalOutputSpan{
+    background-color: #f1ebe5;
+    font-size: 25px;
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.150);
+    display: block;
+    width: 300px;
+    margin: 10px auto;
+    padding: 10px;
+}
+/* day output layouts */
+
+.dayOutput{
+    background-color: #f1ebe5;
+    width: 25%;
+    margin-left: 400px;
+    padding: 15px;
+    display: inline-block;
+    border-radius: 10px;
+}
+.dayOutput li{
+    list-style: none;
+    font-size: 40px;
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.253);
+    margin: 30px 10px;
+    font-size: 120%;
+    padding: 10px;
 }
