--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@ body{
 
 
 }
+/* .Input{
+    border: 1px solid rgba(0, 0, 0, 0.150);
+} */
 .inputBox{
     background-color: #f1ebe5;
     /* width: 7%; */
@@ -71,7 +74,11 @@ body{
     cursor: pointer;
 }
 .generalOutput{
+    background-color: #f1ebe5;
+    margin: auto 100px;
+    padding: 15px;
     text-align: center;
+    border-radius: 10px;
 }
 .generalOutputSpan{
     background-color: #f1ebe5;
