--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body{
     text-align: center;
     border: 1px solid rgba(0, 0, 0, 0.150);
     display: block;
-    width: 300px;
+    width: 80%;
     margin: 10px auto;
     padding: 10px;
 }
